# clinvoice_adapter

./: Cargo.toml  LICENSE  README.md  clippy.toml  package-lock.json
ci/: scope.ts
src/: deletable.rs  initializable.rs  lib.rs  retrievable.rs  updatable.rs  write_where_clause.rs
src/fmt/: as.rs  coalesce.rs  columns_to_sql.rs  mod.rs  null_if.rs  query_builder_ext.rs  snake_case.rs  sql.rs  table_to_sql.rs  typecast.rs  with_identifier.rs
src/fmt/coalesce/: display.rs
src/fmt/null_if/: display.rs
src/fmt/snake_case/: display.rs  from.rs
src/fmt/typecast/: display.rs
src/fmt/with_identifier/: display.rs
src/schema/: adapter.rs  contact_adapter.rs  contact_info_adapter.rs  department_adapter.rs  employee_adapter.rs  expenses_adapter.rs  job_adapter.rs  location_adapter.rs  mod.rs  organization_adapter.rs  timesheet_adapter.rs
src/schema/columns/: contact.rs  department.rs  employee.rs  expense.rs  job.rs  job_department.rs  location.rs  mod.rs  organization.rs  timesheet.rs
src/schema/columns/contact/: columns_to_sql.rs  table_to_sql.rs
src/schema/columns/department/: columns_to_sql.rs  table_to_sql.rs
src/schema/columns/employee/: columns_to_sql.rs  table_to_sql.rs
src/schema/columns/expense/: columns_to_sql.rs  table_to_sql.rs
src/schema/columns/job/: columns_to_sql.rs  table_to_sql.rs
src/schema/columns/job_department/: columns_to_sql.rs  table_to_sql.rs
src/schema/columns/location/: columns_to_sql.rs  table_to_sql.rs
src/schema/columns/organization/: columns_to_sql.rs  table_to_sql.rs
src/schema/columns/timesheet/: columns_to_sql.rs  table_to_sql.rs
src/write_where_clause/: write_context.rs
src/write_where_clause/write_context/: display.rs
