# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice-adapter"
version = "0.18.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Shared adapter definitions for CLInvoice."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/clinvoice-adapter"

[dependencies]
clinvoice-match = {branch = "release/0.8", git = "https://github.com/Iron-E/clinvoice-match"}
clinvoice-schema = {branch = "release/0.11", git = "https://github.com/Iron-E/clinvoice-schema"}

async-trait = "0.1"
futures = "0.3"
serde = {optional = true, version="1"}
sqlx = "0.5"

[dev-dependencies]
pretty_assertions = "1"
sqlx = {features = ["postgres"], version = "0.5"}

[features]
default = ["sqlx-runtime-tokio-rustls"]
serde = ["serde/derive"]
sqlx-runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
