# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "winvoice-adapter"
version = "0.20.4"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Shared adapter definitions for Winvoice."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/winvoice-adapter"

[dependencies]
async-trait = "0.1"
futures = "0.3"
sqlx = "0.5"

[dependencies.winvoice-match]
branch = "release/0.10"
git = "https://github.com/Iron-E/winvoice-match"

[dependencies.winvoice-schema]
branch = "release/0.12"
git = "https://github.com/Iron-E/winvoice-schema"

[dependencies.serde]
optional = true
version = "1"

[dev-dependencies]
pretty_assertions = "1"

[dev-dependencies.sqlx]
features = ["postgres"]
version = "0.5"

[features]
default = ["sqlx-runtime-tokio-rustls"]
serde = ["serde/derive"]
sqlx-runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
