# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "winvoice-adapter"
version = "0.26.1"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Shared adapter definitions for Winvoice."

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/winvoice-adapter"

[dependencies]
async-trait = "0.1"
futures = "0.3"
sqlx = "0.6"

[dependencies.winvoice-match]
branch = "release/0.14"
git = "https://github.com/Iron-E/winvoice-match"

[dependencies.winvoice-schema]
branch = "release/0.16"
git = "https://github.com/Iron-E/winvoice-schema"

[dependencies.serde]
optional = true
version = "1"

[dev-dependencies]
pretty_assertions = "1"
sqlx = {features = ["postgres", "uuid"], version = "0.6"}

[features]
default = ["sqlx-runtime-tokio-rustls"]
serde = ["serde/derive"]
sqlx-runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
